--- a/css/style.css
+++ b/css/style.css
@@ -3613,3 +3613,20 @@ input[type=submit] {
     }
 
 }
+
+.on-main {
+    width: 190px;
+    height: 54px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #fff;
+    border-radius: 30px;
+    margin-top: 30px;
+    transition: .3s ease-in-out;
+}
+
+.on-main:hover {
+    background-color: #fff;
+    color: #000;
+}
